--- a/index.html
+++ b/index.html
@@ -4,16 +4,15 @@
   <meta charset="UTF-8">
   <title>Demande de devis impression 3D</title>
   <meta name="description" content="Demandez un devis pour votre impression 3D à la demande. Téléversez votre fichier STL et recevez un tarif personnalisé.">
-  <script src="https://cdn.emailjs.com/dist/email.min.js"></script>
-  <script>
-    (function() {
-      emailjs.init("27iodv7KMIYgP-rUM"); // <- ta clé publique EmailJS
-    })();
+  <script type="module">
+    import emailjs from 'https://cdn.emailjs.com/dist/email.min.mjs';
+    emailjs.init("27iodv7KMIYgP-rUM"); // ta clé publique
+    window.emailjs = emailjs; // pour usage global
   </script>
   <style>
     body { font-family: sans-serif; padding: 2rem; max-width: 600px; margin: auto; }
     label { display: block; margin-top: 1rem; }
-    input, textarea, select { width: 100%; padding: 0.5rem; }
+    input, textarea { width: 100%; padding: 0.5rem; }
     button { margin-top: 1.5rem; padding: 0.5rem 1rem; }
   </style>
 </head>
@@ -36,7 +35,7 @@
   </form>
 
   <script>
-    document.getElementById('devis-form').addEventListener('submit', function(e) {
+    document.getElementById('devis-form').addEventListener('submit', async function(e) {
       e.preventDefault();
 
       const fichier = document.getElementById('fichier3d').files[0];
@@ -47,18 +46,18 @@
 
       const reader = new FileReader();
       reader.onload = function() {
-        const base64File = reader.result.split(',')[1]; // On retire le header
+        const base64File = reader.result.split(',')[1];
 
         const params = {
           email: e.target.email.value,
           message: e.target.message.value,
           fichier3d: base64File,
-          filename: fichier.name,
+          filename: fichier.name
         };
 
-        emailjs.send("service_cub2bpl", "template_hb266cn", params)
-          .then(() => alert("Demande envoyée avec succès !"))
-          .catch((err) => alert("Erreur lors de l'envoi : " + err.text));
+        window.emailjs.send("service_cub2bpl", "template_4exwh14", params)
+          .then(() => alert("✅ Demande envoyée avec succès !"))
+          .catch((err) => alert("❌ Erreur lors de l'envoi : " + err.text));
       };
 
       reader.readAsDataURL(fichier);
