--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>Demande de devis impression 3D</title>
-  <meta name="description" content="Demandez un devis pour votre impression 3D à la demande. Téléversez votre fichier STL et recevez un tarif personnalisé.">
+  <meta name="description" content="Demandez un devis pour votre impression 3D à la demande. Téléversez votre fichier STL et recevez un tarif personnalisé." />
   <script type="module">
     import emailjs from 'https://cdn.emailjs.com/dist/email.min.mjs';
     emailjs.init("27iodv7KMIYgP-rUM"); // ta clé publique
-    window.emailjs = emailjs; // pour usage global
+    window.emailjs = emailjs; // exposer globalement
   </script>
   <style>
     body { font-family: sans-serif; padding: 2rem; max-width: 600px; margin: auto; }
@@ -23,13 +23,13 @@
 
   <form id="devis-form">
     <label for="email">Votre email :</label>
-    <input type="email" name="email" required>
+    <input type="email" name="email" required />
 
     <label for="message">Votre demande :</label>
     <textarea name="message" rows="4" required></textarea>
 
     <label for="fichier3d">Fichier STL :</label>
-    <input type="file" id="fichier3d" name="fichier3d" accept=".stl" required>
+    <input type="file" id="fichier3d" name="fichier3d" accept=".stl" required />
 
     <button type="submit">Envoyer ma demande</button>
   </form>
