--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
   <script>
     (function() {
-      emailjs.init("27iodv7KMIYgP-rUM"); // ta clé publique EmailJS
+      emailjs.init("27iodv7KMIYgP-rUM");
     })();
   </script>
   <style>
