--- a/index.html
+++ b/index.html
@@ -4,17 +4,20 @@
   <meta charset="UTF-8" />
   <title>Demande de devis impression 3D</title>
   <meta name="description" content="Demandez un devis pour votre impression 3D à la demande. Téléversez votre fichier STL et recevez un tarif personnalisé." />
+
+  <!-- SDK EmailJS compatible GitHub Pages (PAS de module !) -->
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
   <script>
     (function() {
-      emailjs.init("27iodv7KMIYgP-rUM");
+      emailjs.init("27iodv7KMIYgP-rUM"); // Ta clé publique EmailJS
     })();
   </script>
+
   <style>
     body { font-family: sans-serif; padding: 2rem; max-width: 600px; margin: auto; }
     label { display: block; margin-top: 1rem; }
-    input, textarea { width: 100%; padding: 0.5rem; }
-    button { margin-top: 1.5rem; padding: 0.5rem 1rem; }
+    input, textarea { width: 100%; padding: 0.5rem; box-sizing: border-box; }
+    button { margin-top: 1.5rem; padding: 0.5rem 1rem; cursor: pointer; }
   </style>
 </head>
 <body>
