--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <title>Demande de devis impression 3D</title>
   <meta name="description" content="Demandez un devis pour votre impression 3D à la demande. Téléversez votre fichier STL et recevez un tarif personnalisé." />
 
-  <!-- SDK EmailJS compatible GitHub Pages (PAS de module !) -->
+  <!-- Bon SDK EmailJS version 2 -->
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
   <script>
     (function() {
-      emailjs.init("27iodv7KMIYgP-rUM"); // Ta clé publique EmailJS
+      emailjs.init("27iodv7KMIYgP-rUM");
     })();
   </script>
 
