--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           filename: fichier.name
         };
 
-        emailjs.send("service_cub2bpl", "template_qgun5qk", params)
+        emailjs.send("service_cub2bpl", "template_4exwh14", params)
           .then(() => alert("✅ Demande envoyée avec succès !"))
           .catch((err) => alert("❌ Erreur lors de l'envoi : " + err.text));
       };
