--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
   <script>
     (function() {
-      emailjs.init("27iodv7KMIYgP-rUM"); // Ta clé publique
+      emailjs.init("27iodv7KMIYgP-rUM"); // Ta clé publique EmailJS
     })();
   </script>
 
