--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
   <title>Demande de devis impression 3D</title>
   <meta name="description" content="Demandez un devis pour votre impression 3D à la demande. Téléversez votre fichier STL et recevez un tarif personnalisé." />
 
-  <!-- SDK EmailJS compatible GitHub Pages -->
+  <!-- Bon SDK EmailJS -->
   <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
   <script>
     (function() {
-      emailjs.init("27iodv7KMIYgP-rUM"); // Ta clé publique EmailJS
+      emailjs.init("27iodv7KMIYgP-rUM"); // ta clé publique confirmée
     })();
   </script>
 
@@ -53,15 +53,15 @@
         const base64File = reader.result.split(',')[1];
 
         const params = {
-          email: e.target.email.value,
-          message: e.target.message.value,
+          email: document.querySelector('input[name="email"]').value,
+          message: document.querySelector('textarea[name="message"]').value,
           fichier3d: base64File,
           filename: fichier.name
         };
 
         emailjs.send("service_cub2bpl", "template_4exwh14", params)
           .then(() => alert("✅ Demande envoyée avec succès !"))
-          .catch((err) => alert("❌ Erreur lors de l'envoi : " + err.text));
+          .catch((err) => alert("❌ Erreur lors de l'envoi : " + JSON.stringify(err)));
       };
 
       reader.readAsDataURL(fichier);
