--- a/index.html
+++ b/index.html
@@ -1,67 +1,65 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <title>Demande de devis impression 3D</title>
-  <meta name="description" content="Demandez un devis pour votre impression 3D à la demande. Téléversez votre fichier STL et recevez un tarif personnalisé." />
-
-  <!-- Bon SDK EmailJS -->
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
+  <meta charset="UTF-8">
+  <title>Formulaire de devis</title>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.6.4/dist/email.min.js"></script>
   <script>
     (function() {
-      emailjs.init("27iodv7KMIYgP-rUM"); // ta clé publique confirmée
+      emailjs.init("27iodv7KMIYgP-rUM"); // clé publique
     })();
   </script>
-
   <style>
     body { font-family: sans-serif; padding: 2rem; max-width: 600px; margin: auto; }
     label { display: block; margin-top: 1rem; }
-    input, textarea { width: 100%; padding: 0.5rem; box-sizing: border-box; }
-    button { margin-top: 1.5rem; padding: 0.5rem 1rem; cursor: pointer; }
+    input, textarea { width: 100%; padding: 0.5rem; }
+    button { margin-top: 1rem; padding: 0.5rem 1rem; }
   </style>
 </head>
 <body>
 
-  <h1>Demande de devis impression 3D</h1>
-  <p>Remplissez le formulaire ci-dessous pour recevoir un devis personnalisé. Téléversez votre fichier STL.</p>
+  <h1>Demande de devis 3D</h1>
+  <form id="devisForm">
+    <label>Email :</label>
+    <input type="email" name="email" id="email" required>
 
-  <form id="devis-form">
-    <label for="email">Votre email :</label>
-    <input type="email" name="email" required />
+    <label>Message :</label>
+    <textarea name="message" id="message" rows="4" required></textarea>
 
-    <label for="message">Votre demande :</label>
-    <textarea name="message" rows="4" required></textarea>
+    <label>Fichier STL :</label>
+    <input type="file" id="fichier" accept=".stl" required>
 
-    <label for="fichier3d">Fichier STL :</label>
-    <input type="file" id="fichier3d" name="fichier3d" accept=".stl" required />
-
-    <button type="submit">Envoyer ma demande</button>
+    <button type="submit">Envoyer</button>
   </form>
 
   <script>
-    document.getElementById('devis-form').addEventListener('submit', function(e) {
+    document.getElementById("devisForm").addEventListener("submit", function(e) {
       e.preventDefault();
 
-      const fichier = document.getElementById('fichier3d').files[0];
+      const email = document.getElementById("email").value;
+      const message = document.getElementById("message").value;
+      const fichier = document.getElementById("fichier").files[0];
+
       if (!fichier) {
         alert("Merci de joindre un fichier STL.");
         return;
       }
 
       const reader = new FileReader();
-      reader.onload = function() {
-        const base64File = reader.result.split(',')[1];
+      reader.onload = function(event) {
+        const base64 = event.target.result.split(',')[1];
+        const filename = fichier.name;
 
         const params = {
-          email: document.querySelector('input[name="email"]').value,
-          message: document.querySelector('textarea[name="message"]').value,
-          fichier3d: base64File,
-          filename: fichier.name
+          email: email,
+          message: message,
+          fichier3d: base64,
+          filename: filename
         };
 
         emailjs.send("service_cub2bpl", "template_4exwh14", params)
-          .then(() => alert("✅ Demande envoyée avec succès !"))
-          .catch((err) => alert("❌ Erreur lors de l'envoi : " + JSON.stringify(err)));
+          .then(() => alert("✅ Devis envoyé !"))
+          .catch((error) => alert("❌ Erreur : " + JSON.stringify(error)));
       };
 
       reader.readAsDataURL(fichier);
