--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Formulaire de devis</title>
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2.6.4/dist/email.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
   <script>
     (function() {
-      emailjs.init("27iodv7KMIYgP-rUM"); // clé publique
+      emailjs.init("27iodv7KMIYgP-rUM");
     })();
   </script>
   <style>
